# erpc-esp

./: .clang-format  .cmake-format.py  .editorconfig  .envrc  .gitignore  .gitmodules  CMakeLists.txt  README.md  idf_ext.py  setup.py
scripts/ci/: build_examples.sh
src/components/erpc/: CMakeLists.txt  README.md
src/components/erpc/src/: uart_transport.cpp  uart_transport.hpp
src/components/erpc_generic_transport/: CMakeLists.txt
src/components/erpc_generic_transport/src/: generic_transport.cpp  generic_transport.hpp  generic_transport_setup.cpp
src/components/erpc_tinyproto/: CMakeLists.txt  README.md  __init__.py  setup.py
src/components/erpc_tinyproto/include/: erpc_esp_tinyproto_transport_setup.h
src/components/erpc_tinyproto/src/: tinyproto_transport.cpp  tinyproto_transport.hpp  tinyproto_transport_setup.cpp
src/erpc_esp/erpc/: CMakeLists.txt  Kconfig  README.md  erpc_utils.cmake
src/erpc_esp/erpc/include/: erpc_config_override.h
src/erpc_esp/erpc_esp_log/: CMakeLists.txt  README.md  __init__.py  erpc_esp_log.c
src/erpc_esp/erpc_esp_log/include/: erpc_esp_log.h
src/erpc_esp/erpc_esp_log_transport/: CMakeLists.txt  __init__.py
src/erpc_esp/erpc_esp_log_transport/include/: erpc_esp_log_transport_setup.h
src/erpc_esp/erpc_esp_log_transport/src/: common.c  common.h  erpc_esp_log_transport.cpp  erpc_esp_log_transport.hpp  erpc_esp_log_transport_setup.cpp
src/erpc_esp/erpc_esp_target/: CMakeLists.txt
src/erpc_esp/erpc_esp_utils/: CMakeLists.txt  utils.c
src/erpc_esp/erpc_esp_utils/include/erpc_esp/: utils.h
src/erpc_esp/erpc_generic_transport/: CMakeLists.txt  README.md
src/erpc_esp/erpc_generic_transport/include/: erpc_generic_transport_setup.h
src/erpc_esp/erpc_generic_transport/src/: generic_transport.cpp  generic_transport.hpp  generic_transport_setup.cpp
src/erpc_esp/erpc_tinyproto/: CMakeLists.txt  README.md  __init__.py
src/erpc_esp/erpc_tinyproto/include/: erpc_esp_tinyproto_transport_setup.h
src/erpc_esp/erpc_tinyproto/src/: tinyproto_transport.cpp  tinyproto_transport.hpp  tinyproto_transport_setup.cpp
src/erpc_esp/erpc_uart_transport/: CMakeLists.txt  README.md
src/erpc_esp/erpc_uart_transport/include/: erpc_esp_uart_transport_setup.h
src/erpc_esp/erpc_uart_transport/src/: uart_transport.hpp  uart_transport_setup.cpp
src/examples/connection/: CMakeLists.txt  README.md  sdkconfig.defaults
src/examples/connection/main/: CMakeLists.txt  README.md  interface.erpc  main.c  main.cpp  main.py
src/examples/esp_log/: CMakeLists.txt  README.md  sdkconfig.defaults
src/examples/esp_log/main/: CMakeLists.txt  interface.erpc  main.c  main.py
src/examples/hello_world/: CMakeLists.txt  README.md  sdkconfig.defaults
src/examples/hello_world/main/: CMakeLists.txt  interface.erpc  main.c  main.py  main_fake_target.py
src/examples/host/: CMakeLists.txt  README.md  sdkconfig.defaults
src/examples/host/components/esp_timer/: CMakeLists.txt  esp_timer.c
src/examples/host/components/freertos/: CMakeLists.txt  FreeRTOSConfig.h
src/examples/host/components/freertos/include/: freertos
src/examples/host/components/log/: CMakeLists.txt  log_linux.c
src/examples/host/components/posix_io/: CMakeLists.txt  posix_io.c
src/examples/host/components/posix_io/include/erpc_esp/host/: posix_io.h
src/examples/host/components/tinyproto/: CMakeLists.txt
src/examples/host/main/: CMakeLists.txt  interface.erpc  main.c  main.py
src/examples/multiple_interfaces/: CMakeLists.txt  README.md  sdkconfig.defaults
src/examples/multiple_interfaces/main/: CMakeLists.txt  interface.erpc  main.c  main.py
src/examples/multiple_interfaces/main/farewell/: farewell.c  farewell.erpc
src/examples/multiple_interfaces/main/greet/: greet.c  greet.erpc
src/examples/socket/: CMakeLists.txt  README.md  sdkconfig.defaults  sdkconfig.defaults.esp32s2
src/examples/socket/main/: CMakeLists.txt  interface.erpc  main.c  main.py
src/main/: main.c
tools/: common.py  idf_monitorf.py  idf_monitori.py
